# FluxQueueAbstractPOC

./: .env-example  .gitignore  Dockerfile  Makefile  Readme.md  alembic.ini  dev-postgres-docker-compose.yml  docker-entrypoint.sh  prod-postgres-docker-compose.yml  pyproject.toml  requirements.txt
apps/alembic/: env.py
apps/alembic/versions/: c282935e4fbe_add_sign_to_market.py  ca0306b2eb15_change_price_int_float.py  cf77fb02ca05_create_db_schema.py  ea936fc745de_create_sunday_digest.py  f0688b6b5f3f_add_price_remove_percent.py  f0a24a55a727_add_muted_columns.py
apps/notifications/: main.py  sender.py  utils.py
apps/notifications/markup/: button_texts.py  generator.py
apps/notifications/message_generators/: __init__.py  market_digest_generator.py  token_digest_generator.py
apps/notifications/notifications_generators/: __init__.py  perp_market_notifications_generator.py  perp_token_notifications_generator.py  spot_market_notifications_generator.py  spot_token_notifications_generator.py  stock_token_notifications_generator.py
apps/notifications/processors/: __init__.py  binance_klines_processor.py  binance_ticker_processor.py  yahoo_data_processor.py
apps/notifications/sources/: __init__.py  binance_klines_endpoint.py  binance_ticker_endpoint.py  yahoo_finance.py
apps/telegram_bot/: main.py  messages.py  utils.py
apps/telegram_bot/callback_handlers/: __init__.py  callback_resolver.py
apps/telegram_bot/commands/: __init__.py  delete_market.py  delete_token.py  help_command.py  list_command.py  market_command.py  start_command.py  token_command.py
(+4 files in other folders)
