[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stasik"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tg_bot = "apps.telegram_bot.main:main"
notifications = "apps.notifications.main:main"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]